--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
     max-width: 600px;
+    min-height: 100vh;
     margin: 0 auto;
     padding: 0px;
     background-color: #152645;
